update some culumn names for postgresql pipline

--- a/Data Preparation For PosgreSQL.ipynb
+++ b/Data Preparation For PosgreSQL.ipynb
@@ -2,24 +2,19 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 188,
    "id": "initial_id",
    "metadata": {
-    "collapsed": true,
-    "ExecuteTime": {
-     "end_time": "2024-11-05T12:06:24.307859Z",
-     "start_time": "2024-11-05T12:06:24.303041Z"
-    }
+    "collapsed": true
    },
-   "outputs": [],
    "source": [
     "import pandas as pd\n",
     "import numpy as np"
-   ]
+   ],
+   "outputs": [],
+   "execution_count": null
   },
   {
    "cell_type": "code",
-   "outputs": [],
    "source": [
     "application_train = pd.read_csv(\"Data/application_train.csv\")\n",
     "bureau = pd.read_csv(\"Data/bureau.csv\")\n",
@@ -32,16 +27,16 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-11-05T12:06:55.361577Z",
-     "start_time": "2024-11-05T12:06:25.849777Z"
+     "end_time": "2024-11-05T19:07:35.002142Z",
+     "start_time": "2024-11-05T19:07:11.434732Z"
     }
    },
    "id": "d5e90b98e1b842db",
-   "execution_count": 189
+   "outputs": [],
+   "execution_count": 68
   },
   {
    "cell_type": "code",
-   "outputs": [],
    "source": [
     "application_train_rename_columns = {\n",
     "    # Columns for applications table\n",
@@ -56,9 +51,9 @@
     "    \"HOUR_APPR_PROCESS_START\": \"application_hour\",\n",
     "\n",
     "    # Columns for contacts table with exact names as shown in the photo\n",
-    "    \"FLAG_MOBIL\": \"has_mobile\",\n",
-    "    \"FLAG_EMP_PHONE\": \"has_work_phone\",\n",
-    "    \"FLAG_WORK_PHONE\": \"has_home_phone\",\n",
+    "    \"FLAG_MOBIL\": \"mobile\",\n",
+    "    \"FLAG_EMP_PHONE\": \"work_phone\",\n",
+    "    \"FLAG_WORK_PHONE\": \"home_phone\",\n",
     "    \"FLAG_CONT_MOBILE\": \"mobile_reachable\",\n",
     "    \"FLAG_PHONE\": \"provided_home_phone\",\n",
     "    \"FLAG_EMAIL\": \"provided_email\",\n",
@@ -169,12 +164,12 @@
     "    \"WALLSMATERIAL_MODE\": \"walls_material_mode\",\n",
     "    \n",
     "    # Columns for creditinfo table\n",
-    "    \"AMT_REQ_CREDIT_BUREAU_HOUR\": \"credit_bureau_req_hour\",\n",
-    "    \"AMT_REQ_CREDIT_BUREAU_DAY\": \"credit_bureau_req_day\",\n",
-    "    \"AMT_REQ_CREDIT_BUREAU_WEEK\": \"credit_bureau_req_week\",\n",
-    "    \"AMT_REQ_CREDIT_BUREAU_MON\": \"credit_bureau_req_month\",\n",
-    "    \"AMT_REQ_CREDIT_BUREAU_QRT\": \"credit_bureau_req_quarter\",\n",
-    "    \"AMT_REQ_CREDIT_BUREAU_YEAR\": \"credit_bureau_req_year\",\n",
+    "    \"AMT_REQ_CREDIT_BUREAU_HOUR\": \"clicks_last_hour\",\n",
+    "    \"AMT_REQ_CREDIT_BUREAU_DAY\": \"clicks_last_day\",\n",
+    "    \"AMT_REQ_CREDIT_BUREAU_WEEK\": \"clicks_last_week\",\n",
+    "    \"AMT_REQ_CREDIT_BUREAU_MON\": \"clicks_last_1month\",\n",
+    "    \"AMT_REQ_CREDIT_BUREAU_QRT\": \"clicks_last_3months\",\n",
+    "    \"AMT_REQ_CREDIT_BUREAU_YEAR\": \"clicks_last_12months\",\n",
     "\n",
     "}\n",
     "application_train.rename(columns=application_train_rename_columns, inplace=True)"
@@ -182,16 +177,16 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-11-05T12:06:55.377637Z",
-     "start_time": "2024-11-05T12:06:55.363572Z"
+     "end_time": "2024-11-05T19:07:35.020748Z",
+     "start_time": "2024-11-05T19:07:35.006148Z"
     }
    },
    "id": "4cd1d2450a5b3e0c",
-   "execution_count": 190
+   "outputs": [],
+   "execution_count": 69
   },
   {
    "cell_type": "code",
-   "outputs": [],
    "source": [
     "bureau_rename_columns = {\n",
     "    \"SK_ID_CURR\": \"loan_id\",\n",
@@ -217,16 +212,16 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-11-05T12:06:55.413241Z",
-     "start_time": "2024-11-05T12:06:55.381161Z"
+     "end_time": "2024-11-05T19:07:36.062191Z",
+     "start_time": "2024-11-05T19:07:36.057172Z"
     }
    },
    "id": "e1729cdb102007b2",
-   "execution_count": 191
+   "outputs": [],
+   "execution_count": 70
   },
   {
    "cell_type": "code",
-   "outputs": [],
    "source": [
     "bureau_balance_rename_columns = {\n",
     "    \"SK_ID_BUREAU\": \"creditinfo_id\",\n",
@@ -238,16 +233,16 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-11-05T12:06:55.425231Z",
-     "start_time": "2024-11-05T12:06:55.415232Z"
+     "end_time": "2024-11-05T19:07:37.048282Z",
+     "start_time": "2024-11-05T19:07:37.044788Z"
     }
    },
    "id": "a80d7060f9a80386",
-   "execution_count": 192
+   "outputs": [],
+   "execution_count": 71
   },
   {
    "cell_type": "code",
-   "outputs": [],
    "source": [
     "credit_card_balance_rename_columns = {\n",
     "    \"SK_ID_PREV\": \"prev_credit_id\",\n",
@@ -279,16 +274,16 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-11-05T12:06:55.438437Z",
-     "start_time": "2024-11-05T12:06:55.427234Z"
+     "end_time": "2024-11-05T19:07:38.042946Z",
+     "start_time": "2024-11-05T19:07:38.038274Z"
     }
    },
    "id": "87f8db0b66a467bb",
-   "execution_count": 193
+   "outputs": [],
+   "execution_count": 72
   },
   {
    "cell_type": "code",
-   "outputs": [],
    "source": [
     "installments_payments_rename_columns = {\n",
     "    \"SK_ID_PREV\": \"prev_credit_id\",\n",
@@ -305,16 +300,16 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-11-05T12:06:55.452475Z",
-     "start_time": "2024-11-05T12:06:55.440459Z"
+     "end_time": "2024-11-05T19:07:39.034537Z",
+     "start_time": "2024-11-05T19:07:39.030532Z"
     }
    },
    "id": "39febf5259a1d9f6",
-   "execution_count": 194
+   "outputs": [],
+   "execution_count": 73
   },
   {
    "cell_type": "code",
-   "outputs": [],
    "source": [
     "POS_CASH_balance_rename_columns = {\n",
     "    \"SK_ID_PREV\": \"prev_credit_id\",\n",
@@ -331,16 +326,16 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-11-05T12:06:55.466708Z",
-     "start_time": "2024-11-05T12:06:55.454490Z"
+     "end_time": "2024-11-05T19:07:40.017267Z",
+     "start_time": "2024-11-05T19:07:40.013586Z"
     }
    },
    "id": "59921f11d53d5dbe",
-   "execution_count": 195
+   "outputs": [],
+   "execution_count": 74
   },
   {
    "cell_type": "code",
-   "outputs": [],
    "source": [
     "previous_application_rename_columns = {\n",
     "    \"SK_ID_PREV\": \"prev_credit_id\",\n",
@@ -351,10 +346,10 @@
     "    \"AMT_CREDIT\": \"approved_amount\",\n",
     "    \"AMT_DOWN_PAYMENT\": \"down_payment\",\n",
     "    \"AMT_GOODS_PRICE\": \"goods_price\",\n",
-    "    \"WEEKDAY_APPR_PROCESS_START\": \"application_day\",\n",
+    "    \"WEEKDAY_APPR_PROCESS_START\": \"application_weekday\",\n",
     "    \"HOUR_APPR_PROCESS_START\": \"application_hour\",\n",
-    "    \"FLAG_LAST_APPL_PER_CONTRACT\": \"last_application_flag\",\n",
-    "    \"NFLAG_LAST_APPL_IN_DAY\": \"last_day_application_flag\",\n",
+    "    \"FLAG_LAST_APPL_PER_CONTRACT\": \"last_application\",\n",
+    "    \"NFLAG_LAST_APPL_IN_DAY\": \"last_day_application\",\n",
     "    \"RATE_DOWN_PAYMENT\": \"down_payment_rate\",\n",
     "    \"RATE_INTEREST_PRIMARY\": \"primary_interest_rate\",\n",
     "    \"RATE_INTEREST_PRIVILEGED\": \"privileged_interest_rate\",\n",
@@ -386,16 +381,16 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-11-05T12:06:55.487265Z",
-     "start_time": "2024-11-05T12:06:55.468724Z"
+     "end_time": "2024-11-05T19:07:41.016565Z",
+     "start_time": "2024-11-05T19:07:41.011096Z"
     }
    },
    "id": "ca006c16b9742700",
-   "execution_count": 196
+   "outputs": [],
+   "execution_count": 75
   },
   {
    "cell_type": "code",
-   "outputs": [],
    "source": [
     "applications = application_train[[\n",
     "    \"loan_id\",\n",
@@ -411,9 +406,9 @@
     "\n",
     "contacts = application_train[[\n",
     "    \"loan_id\",                # Unique identifier for the loan/application\n",
-    "    \"has_mobile\",             # Boolean indicating if the applicant has a mobile phone\n",
-    "    \"has_work_phone\",         # Boolean indicating if the applicant has a work phone\n",
-    "    \"has_home_phone\",         # Boolean indicating if the applicant has a home phone\n",
+    "    \"mobile\",             # Boolean indicating if the applicant has a mobile phone\n",
+    "    \"work_phone\",         # Boolean indicating if the applicant has a work phone\n",
+    "    \"home_phone\",         # Boolean indicating if the applicant has a home phone\n",
     "    \"mobile_reachable\",       # Boolean indicating if the mobile is reachable\n",
     "    \"provided_home_phone\",    # Boolean indicating if a home phone is provided\n",
     "    \"provided_email\",         # Boolean indicating if an email is provided\n",
@@ -484,7 +479,7 @@
     "\n",
     "\n",
     "creditinfo = application_train[[\n",
-    "    \"loan_id\",\"credit_bureau_req_hour\", \"credit_bureau_req_day\", \"credit_bureau_req_week\",\"credit_bureau_req_month\", \"credit_bureau_req_quarter\", \"credit_bureau_req_year\"]]\n",
+    "    \"loan_id\",\"clicks_last_hour\", \"clicks_last_day\", \"clicks_last_week\",\"clicks_last_1month\", \"clicks_last_3months\", \"clicks_last_12months\"]]\n",
     "creditinfo = creditinfo.merge(bureau, on=\"loan_id\", how=\"left\")\n",
     "\n",
     "\n",
@@ -505,21 +500,21 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-11-05T12:12:04.413755Z",
-     "start_time": "2024-11-05T12:12:03.599178Z"
+     "end_time": "2024-11-05T19:07:42.702603Z",
+     "start_time": "2024-11-05T19:07:42.016673Z"
     }
    },
    "id": "281a6a6c9cf73305",
-   "execution_count": 198
+   "outputs": [],
+   "execution_count": 76
   },
   {
+   "metadata": {},
    "cell_type": "code",
+   "source": "",
+   "id": "962c29e5e0d06b44",
    "outputs": [],
-   "source": [],
-   "metadata": {
-    "collapsed": false
-   },
-   "id": "685481c0828f999"
+   "execution_count": null
   }
  ],
  "metadata": {
