add description xlsx and PosgreSQL pipline

--- a/Data Preparation For PosgreSQL.ipynb
+++ b/Data Preparation For PosgreSQL.ipynb
@@ -8,7 +8,9 @@
    },
    "source": [
     "import pandas as pd\n",
-    "import numpy as np"
+    "import numpy as np\n",
+    "from sqlalchemy import create_engine\n",
+    "engine = create_engine('postgresql+psycopg2://Scraping:.%40SCI44P%40.@192.168.0.125:5432/CreditScoring')"
    ],
    "outputs": [],
    "execution_count": null
@@ -25,15 +27,11 @@
     "previous_application = pd.read_csv(\"Data/previous_application.csv\")"
    ],
    "metadata": {
-    "collapsed": false,
-    "ExecuteTime": {
-     "end_time": "2024-11-05T19:07:35.002142Z",
-     "start_time": "2024-11-05T19:07:11.434732Z"
-    }
+    "collapsed": false
    },
    "id": "d5e90b98e1b842db",
    "outputs": [],
-   "execution_count": 68
+   "execution_count": null
   },
   {
    "cell_type": "code",
@@ -49,14 +47,22 @@
     "    \"NAME_TYPE_SUITE\": \"companion\",\n",
     "    \"WEEKDAY_APPR_PROCESS_START\": \"application_weekday\",\n",
     "    \"HOUR_APPR_PROCESS_START\": \"application_hour\",\n",
+    "    'EXT_SOURCE_1' : 'ext_source_score_1',\n",
+    "    'EXT_SOURCE_2' : 'ext_source_score_2',\n",
+    "    'EXT_SOURCE_3' : 'ext_source_score_3',\n",
+    "    'OBS_30_CNT_SOCIAL_CIRCLE' : 'obs_30_social_circle',\n",
+    "    'DEF_30_CNT_SOCIAL_CIRCLE' : 'def_30_social_circle',\n",
+    "    'OBS_60_CNT_SOCIAL_CIRCLE' : 'obs_60_social_circle',\n",
+    "    'DEF_60_CNT_SOCIAL_CIRCLE' : 'def_60_social_circle',\n",
     "\n",
-    "    # Columns for contacts table with exact names as shown in the photo\n",
+    "\n",
+    "# Columns for contacts table with exact names as shown in the photo\n",
     "    \"FLAG_MOBIL\": \"mobile\",\n",
-    "    \"FLAG_EMP_PHONE\": \"work_phone\",\n",
-    "    \"FLAG_WORK_PHONE\": \"home_phone\",\n",
+    "    \"FLAG_EMP_PHONE\": \"emp_phone\",\n",
+    "    \"FLAG_WORK_PHONE\": \"work_phone\",\n",
     "    \"FLAG_CONT_MOBILE\": \"mobile_reachable\",\n",
-    "    \"FLAG_PHONE\": \"provided_home_phone\",\n",
-    "    \"FLAG_EMAIL\": \"provided_email\",\n",
+    "    \"FLAG_PHONE\": \"phone\",\n",
+    "    \"FLAG_EMAIL\": \"email\",\n",
     "    \"DAYS_LAST_PHONE_CHANGE\": \"last_phone_change_days\",\n",
     "\n",
     "    # Columns for personal table with exact names as shown in the photo\n",
@@ -67,7 +73,7 @@
     "    \"CNT_FAM_MEMBERS\": \"family_members\",\n",
     "    \"NAME_EDUCATION_TYPE\": \"education_level\",\n",
     "    \"OCCUPATION_TYPE\": \"occupation\",\n",
-    "    \"ORGANIZATION_TYPE\": \"org_type\",\n",
+    "    \"ORGANIZATION_TYPE\": \"organisation_type\",\n",
     "    \"AMT_INCOME_TOTAL\": \"income_total\",\n",
     "    \"NAME_INCOME_TYPE\": \"income_type\",\n",
     "    \"FLAG_OWN_REALTY\": \"owns_realty\",\n",
@@ -167,7 +173,7 @@
     "    \"AMT_REQ_CREDIT_BUREAU_HOUR\": \"clicks_last_hour\",\n",
     "    \"AMT_REQ_CREDIT_BUREAU_DAY\": \"clicks_last_day\",\n",
     "    \"AMT_REQ_CREDIT_BUREAU_WEEK\": \"clicks_last_week\",\n",
-    "    \"AMT_REQ_CREDIT_BUREAU_MON\": \"clicks_last_1month\",\n",
+    "    \"AMT_REQ_CREDIT_BUREAU_MON\": \"clicks_last_month\",\n",
     "    \"AMT_REQ_CREDIT_BUREAU_QRT\": \"clicks_last_3months\",\n",
     "    \"AMT_REQ_CREDIT_BUREAU_YEAR\": \"clicks_last_12months\",\n",
     "\n",
@@ -175,15 +181,11 @@
     "application_train.rename(columns=application_train_rename_columns, inplace=True)"
    ],
    "metadata": {
-    "collapsed": false,
-    "ExecuteTime": {
-     "end_time": "2024-11-05T19:07:35.020748Z",
-     "start_time": "2024-11-05T19:07:35.006148Z"
-    }
+    "collapsed": false
    },
    "id": "4cd1d2450a5b3e0c",
    "outputs": [],
-   "execution_count": 69
+   "execution_count": null
   },
   {
    "cell_type": "code",
@@ -210,15 +212,11 @@
     "bureau.rename(columns=bureau_rename_columns,inplace=True)"
    ],
    "metadata": {
-    "collapsed": false,
-    "ExecuteTime": {
-     "end_time": "2024-11-05T19:07:36.062191Z",
-     "start_time": "2024-11-05T19:07:36.057172Z"
-    }
+    "collapsed": false
    },
    "id": "e1729cdb102007b2",
    "outputs": [],
-   "execution_count": 70
+   "execution_count": null
   },
   {
    "cell_type": "code",
@@ -231,15 +229,11 @@
     "bureau_balance.rename(columns=bureau_balance_rename_columns,inplace=True)"
    ],
    "metadata": {
-    "collapsed": false,
-    "ExecuteTime": {
-     "end_time": "2024-11-05T19:07:37.048282Z",
-     "start_time": "2024-11-05T19:07:37.044788Z"
-    }
+    "collapsed": false
    },
    "id": "a80d7060f9a80386",
    "outputs": [],
-   "execution_count": 71
+   "execution_count": null
   },
   {
    "cell_type": "code",
@@ -272,15 +266,11 @@
     "credit_card_balance.rename(columns=credit_card_balance_rename_columns,inplace=True)"
    ],
    "metadata": {
-    "collapsed": false,
-    "ExecuteTime": {
-     "end_time": "2024-11-05T19:07:38.042946Z",
-     "start_time": "2024-11-05T19:07:38.038274Z"
-    }
+    "collapsed": false
    },
    "id": "87f8db0b66a467bb",
    "outputs": [],
-   "execution_count": 72
+   "execution_count": null
   },
   {
    "cell_type": "code",
@@ -298,15 +288,11 @@
     "installments_payments.rename(columns=installments_payments_rename_columns,inplace=True)"
    ],
    "metadata": {
-    "collapsed": false,
-    "ExecuteTime": {
-     "end_time": "2024-11-05T19:07:39.034537Z",
-     "start_time": "2024-11-05T19:07:39.030532Z"
-    }
+    "collapsed": false
    },
    "id": "39febf5259a1d9f6",
    "outputs": [],
-   "execution_count": 73
+   "execution_count": null
   },
   {
    "cell_type": "code",
@@ -324,15 +310,11 @@
     "POS_CASH_balance.rename(columns=POS_CASH_balance_rename_columns,inplace=True)"
    ],
    "metadata": {
-    "collapsed": false,
-    "ExecuteTime": {
-     "end_time": "2024-11-05T19:07:40.017267Z",
-     "start_time": "2024-11-05T19:07:40.013586Z"
-    }
+    "collapsed": false
    },
    "id": "59921f11d53d5dbe",
    "outputs": [],
-   "execution_count": 74
+   "execution_count": null
   },
   {
    "cell_type": "code",
@@ -358,7 +340,7 @@
     "    \"DAYS_DECISION\": \"decision_days\",\n",
     "    \"NAME_PAYMENT_TYPE\": \"payment_type\",\n",
     "    \"CODE_REJECT_REASON\": \"reject_reason\",\n",
-    "    \"NAME_TYPE_SUITE\": \"companion_type\",\n",
+    "    \"NAME_TYPE_SUITE\": \"companion\",\n",
     "    \"NAME_CLIENT_TYPE\": \"client_type\",\n",
     "    \"NAME_GOODS_CATEGORY\": \"goods_category\",\n",
     "    \"NAME_PORTFOLIO\": \"portfolio_type\",\n",
@@ -374,20 +356,16 @@
     "    \"DAYS_LAST_DUE_1ST_VERSION\": \"first_due_version_days\",\n",
     "    \"DAYS_LAST_DUE\": \"last_due_days\",\n",
     "    \"DAYS_TERMINATION\": \"termination_days\",\n",
-    "    \"NFLAG_INSURED_ON_APPROVAL\": \"insurance_request_flag\"\n",
+    "    \"NFLAG_INSURED_ON_APPROVAL\": \"insurance_request\"\n",
     "}\n",
     "previous_application.rename(columns=previous_application_rename_columns,inplace=True)"
    ],
    "metadata": {
-    "collapsed": false,
-    "ExecuteTime": {
-     "end_time": "2024-11-05T19:07:41.016565Z",
-     "start_time": "2024-11-05T19:07:41.011096Z"
-    }
+    "collapsed": false
    },
    "id": "ca006c16b9742700",
    "outputs": [],
-   "execution_count": 75
+   "execution_count": null
   },
   {
    "cell_type": "code",
@@ -400,20 +378,48 @@
     "    \"goods_price\", \n",
     "    \"companion\",\n",
     "    \"application_weekday\",\n",
-    "    \"application_hour\"   \n",
+    "    \"application_hour\",\n",
+    "    'ext_source_score_1',\n",
+    "    'ext_source_score_2',\n",
+    "    'ext_source_score_3',\n",
+    "    'obs_30_social_circle',\n",
+    "    'def_30_social_circle',\n",
+    "    'obs_60_social_circle',\n",
+    "    'def_60_social_circle',\n",
+    "    \"target\"\n",
     "]]\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
     "\n",
     "\n",
     "contacts = application_train[[\n",
     "    \"loan_id\",                # Unique identifier for the loan/application\n",
     "    \"mobile\",             # Boolean indicating if the applicant has a mobile phone\n",
-    "    \"work_phone\",         # Boolean indicating if the applicant has a work phone\n",
-    "    \"home_phone\",         # Boolean indicating if the applicant has a home phone\n",
+    "    \"emp_phone\",         # Boolean indicating if the applicant has a work phone\n",
+    "    \"work_phone\",         # Boolean indicating if the applicant has a home phone\n",
     "    \"mobile_reachable\",       # Boolean indicating if the mobile is reachable\n",
-    "    \"provided_home_phone\",    # Boolean indicating if a home phone is provided\n",
-    "    \"provided_email\",         # Boolean indicating if an email is provided\n",
+    "    \"phone\",    # Boolean indicating if a home phone is provided\n",
+    "    \"email\",         # Boolean indicating if an email is provided\n",
     "    \"last_phone_change_days\"  # Days since the last phone change\n",
     "]]\n",
+    "cols_to_convert = ['mobile', 'emp_phone', 'work_phone', 'mobile_reachable', 'phone', 'email']\n",
+    "contacts[cols_to_convert] = contacts[cols_to_convert].apply(lambda col: col.map({1: True, 0: False}))\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
     "\n",
     "\n",
     "personal = application_train[[\n",
@@ -425,7 +431,7 @@
     "    \"family_members\",       # Number of family members\n",
     "    \"education_level\",      # Education level of the applicant\n",
     "    \"occupation\",           # Occupation type of the applicant\n",
-    "    \"org_type\",             # Organization type where the applicant works\n",
+    "    \"organisation_type\",             # Organization type where the applicant works\n",
     "    \"income_total\",         # Total income of the applicant\n",
     "    \"income_type\",          # Type of income (e.g., salaried, business)\n",
     "    \"owns_realty\",          # Boolean flag for real estate ownership\n",
@@ -436,6 +442,14 @@
     "    \"registration_days\",    # Days since registration\n",
     "    \"id_change_days\"        # Days since ID was last published/changed\n",
     "]]\n",
+    "personal['owns_realty'] = personal['owns_realty'].map({'Y': True, 'N': False})\n",
+    "personal['owns_car'] = personal['owns_car'].map({'Y': True, 'N': False})\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
     "\n",
     "\n",
     "geographical = application_train[[\n",
@@ -451,11 +465,43 @@
     "    \"different_city_live_work\"\n",
     "]]\n",
     "\n",
+    "cols_to_convert = [\n",
+    "    'different_region_contact',\n",
+    "    'different_region_work',\n",
+    "    'different_region_live_work',\n",
+    "    'different_city_contact',\n",
+    "    'different_city_work',\n",
+    "    'different_city_live_work'\n",
+    "]\n",
+    "\n",
+    "geographical[cols_to_convert] = geographical[cols_to_convert].apply(lambda col: col.map({1: True, 0: False}))\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
     "\n",
     "documentations = application_train[[\n",
     "    \"loan_id\",\"doc_1\",\"doc_2\", \"doc_3\", \"doc_4\", \"doc_5\", \"doc_6\",\n",
     "    \"doc_7\", \"doc_8\", \"doc_9\",\"doc_10\", \"doc_11\", \"doc_12\", \"doc_13\",\n",
     "    \"doc_14\", \"doc_15\", \"doc_16\",\"doc_17\", \"doc_18\", \"doc_19\",\"doc_20\"]]\n",
+    "\n",
+    "cols_to_convert = [\n",
+    "    'doc_1', 'doc_2', 'doc_3', 'doc_4', 'doc_5',\n",
+    "    'doc_6', 'doc_7', 'doc_8', 'doc_9', 'doc_10',\n",
+    "    'doc_11', 'doc_12', 'doc_13', 'doc_14', 'doc_15',\n",
+    "    'doc_16', 'doc_17', 'doc_18', 'doc_19', 'doc_20'\n",
+    "]\n",
+    "\n",
+    "documentations[cols_to_convert] = documentations[cols_to_convert].apply(lambda col: col.map({1: True, 0: False}))\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
     "\n",
     "\n",
     "residence = application_train[[\n",
@@ -478,8 +524,10 @@
     "]]\n",
     "\n",
     "\n",
+    "\n",
+    "\n",
     "creditinfo = application_train[[\n",
-    "    \"loan_id\",\"clicks_last_hour\", \"clicks_last_day\", \"clicks_last_week\",\"clicks_last_1month\", \"clicks_last_3months\", \"clicks_last_12months\"]]\n",
+    "    \"loan_id\",\"clicks_last_hour\", \"clicks_last_day\", \"clicks_last_week\",\"clicks_last_month\", \"clicks_last_3months\", \"clicks_last_12months\"]]\n",
     "creditinfo = creditinfo.merge(bureau, on=\"loan_id\", how=\"left\")\n",
     "\n",
     "\n",
@@ -495,26 +543,173 @@
     "credit_card_balance = credit_card_balance\n",
     "\n",
     "\n",
-    "hisotrical_applications = previous_application"
+    "hisotrical_applications = previous_application\n",
+    "hisotrical_applications['insurance_request'] = hisotrical_applications['insurance_request'].map({1: True, 0: False})\n",
+    "hisotrical_applications['last_application'] = hisotrical_applications['last_application'].map({'Y': True, 'N': False})\n",
+    "hisotrical_applications['last_day_application'] = hisotrical_applications['last_day_application'].map({1: True, 0: False})\n"
    ],
    "metadata": {
-    "collapsed": false,
-    "ExecuteTime": {
-     "end_time": "2024-11-05T19:07:42.702603Z",
-     "start_time": "2024-11-05T19:07:42.016673Z"
-    }
+    "collapsed": false
    },
    "id": "281a6a6c9cf73305",
    "outputs": [],
-   "execution_count": 76
+   "execution_count": null
   },
   {
-   "metadata": {},
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-11-06T20:09:01.112727Z",
+     "start_time": "2024-11-06T20:00:19.955727Z"
+    }
+   },
    "cell_type": "code",
-   "source": "",
-   "id": "962c29e5e0d06b44",
-   "outputs": [],
-   "execution_count": null
+   "source": "installments_payments.to_sql('installments_payments', engine, if_exists='append', index=False,schema=\"dbo\")",
+   "id": "96a3dd3f52936754",
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "401"
+      ]
+     },
+     "execution_count": 166,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "execution_count": 166
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-11-06T20:15:07.796096Z",
+     "start_time": "2024-11-06T20:09:08.158204Z"
+    }
+   },
+   "cell_type": "code",
+   "source": "pos_cash_balance.to_sql('pos_cash_balance', engine, if_exists='append', index=False,schema=\"dbo\")",
+   "id": "d84305432eaa1b17",
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "358"
+      ]
+     },
+     "execution_count": 167,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "execution_count": 167
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-11-06T20:20:58.762157Z",
+     "start_time": "2024-11-06T20:15:13.455161Z"
+    }
+   },
+   "cell_type": "code",
+   "source": "credit_card_balance.to_sql('credit_card_balance', engine, if_exists='append', index=False,schema=\"dbo\")",
+   "id": "cee67d2c37df1213",
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "312"
+      ]
+     },
+     "execution_count": 168,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "execution_count": 168
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-11-06T20:25:05.945689Z",
+     "start_time": "2024-11-06T20:21:37.215326Z"
+    }
+   },
+   "cell_type": "code",
+   "source": "hisotrical_applications.to_sql('hisotrical_applications', engine, if_exists='append', index=False, schema=\"dbo\")",
+   "id": "7c27db5d69bb21eb",
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "461"
+      ]
+     },
+     "execution_count": 170,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "execution_count": 170
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-11-06T20:00:16.789744Z",
+     "start_time": "2024-11-06T20:00:16.779763Z"
+    }
+   },
+   "cell_type": "code",
+   "source": "pd.read_sql(\"SELECT * FROM dbo.installments_payments\", engine)\n",
+   "id": "18b49e4350d6297d",
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Empty DataFrame\n",
+       "Columns: [prev_credit_id, loan_id, installment_version, installment_number, due_days, payment_entry_days, installment_amount, payment_amount]\n",
+       "Index: []"
+      ],
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>prev_credit_id</th>\n",
+       "      <th>loan_id</th>\n",
+       "      <th>installment_version</th>\n",
+       "      <th>installment_number</th>\n",
+       "      <th>due_days</th>\n",
+       "      <th>payment_entry_days</th>\n",
+       "      <th>installment_amount</th>\n",
+       "      <th>payment_amount</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ]
+     },
+     "execution_count": 165,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "execution_count": 165
   }
  ],
  "metadata": {
