--- a/ScoreCard/Stage 1 (Merging and feature engineerung.ipynb
+++ b/ScoreCard/Stage 1 (Merging and feature engineerung.ipynb
@@ -6,8 +6,8 @@
    "metadata": {
     "collapsed": true,
     "ExecuteTime": {
-     "end_time": "2025-08-22T08:46:05.547832200Z",
-     "start_time": "2025-08-22T08:46:03.616806400Z"
+     "end_time": "2025-08-24T16:34:13.300135Z",
+     "start_time": "2025-08-24T16:34:12.150331Z"
     }
    },
    "source": [
@@ -16,55 +16,71 @@
     "from ScoringPy import Processing\n",
     "from pathlib import Path\n"
    ],
-   "outputs": [
-    {
-     "ename": "ModuleNotFoundError",
-     "evalue": "No module named 'matplotlib'",
-     "output_type": "error",
-     "traceback": [
-      "\u001B[31m---------------------------------------------------------------------------\u001B[39m",
-      "\u001B[31mModuleNotFoundError\u001B[39m                       Traceback (most recent call last)",
-      "\u001B[36mCell\u001B[39m\u001B[36m \u001B[39m\u001B[32mIn[1]\u001B[39m\u001B[32m, line 3\u001B[39m\n\u001B[32m      1\u001B[39m \u001B[38;5;28;01mimport\u001B[39;00m\u001B[38;5;250m \u001B[39m\u001B[34;01mpandas\u001B[39;00m\u001B[38;5;250m \u001B[39m\u001B[38;5;28;01mas\u001B[39;00m\u001B[38;5;250m \u001B[39m\u001B[34;01mpd\u001B[39;00m\n\u001B[32m      2\u001B[39m \u001B[38;5;28;01mimport\u001B[39;00m\u001B[38;5;250m \u001B[39m\u001B[34;01mnumpy\u001B[39;00m\u001B[38;5;250m \u001B[39m\u001B[38;5;28;01mas\u001B[39;00m\u001B[38;5;250m \u001B[39m\u001B[34;01mnp\u001B[39;00m\n\u001B[32m----> \u001B[39m\u001B[32m3\u001B[39m \u001B[38;5;28;01mfrom\u001B[39;00m\u001B[38;5;250m \u001B[39m\u001B[34;01mScoringPy\u001B[39;00m\u001B[38;5;250m \u001B[39m\u001B[38;5;28;01mimport\u001B[39;00m Processing\n\u001B[32m      4\u001B[39m \u001B[38;5;28;01mfrom\u001B[39;00m\u001B[38;5;250m \u001B[39m\u001B[34;01mpathlib\u001B[39;00m\u001B[38;5;250m \u001B[39m\u001B[38;5;28;01mimport\u001B[39;00m Path\n",
-      "\u001B[36mFile \u001B[39m\u001B[32m~\\Desktop\\Credit-Scoring\\venv\\Lib\\site-packages\\ScoringPy\\__init__.py:4\u001B[39m\n\u001B[32m      3\u001B[39m \u001B[38;5;66;03m# Import classes and functions from library\u001B[39;00m\n\u001B[32m----> \u001B[39m\u001B[32m4\u001B[39m \u001B[38;5;28;01mfrom\u001B[39;00m\u001B[38;5;250m \u001B[39m\u001B[34;01mScoringPy\u001B[39;00m\u001B[34;01m.\u001B[39;00m\u001B[34;01mmodule\u001B[39;00m\u001B[38;5;250m \u001B[39m\u001B[38;5;28;01mimport\u001B[39;00m *\n\u001B[32m      7\u001B[39m \u001B[38;5;66;03m# Make these modules available in the global scope\u001B[39;00m\n\u001B[32m      8\u001B[39m __all__ = [\u001B[33m'\u001B[39m\u001B[33mWoeAnalysis\u001B[39m\u001B[33m'\u001B[39m,\u001B[33m'\u001B[39m\u001B[33mProcessing\u001B[39m\u001B[33m'\u001B[39m,\u001B[33m'\u001B[39m\u001B[33mCreditScoring\u001B[39m\u001B[33m'\u001B[39m]\n",
-      "\u001B[36mFile \u001B[39m\u001B[32m~\\Desktop\\Credit-Scoring\\venv\\Lib\\site-packages\\ScoringPy\\module.py:3\u001B[39m\n\u001B[32m      1\u001B[39m \u001B[38;5;28;01mfrom\u001B[39;00m\u001B[38;5;250m \u001B[39m\u001B[34;01msklearn\u001B[39;00m\u001B[34;01m.\u001B[39;00m\u001B[34;01mpipeline\u001B[39;00m\u001B[38;5;250m \u001B[39m\u001B[38;5;28;01mimport\u001B[39;00m Pipeline\n\u001B[32m      2\u001B[39m \u001B[38;5;28;01mfrom\u001B[39;00m\u001B[38;5;250m \u001B[39m\u001B[34;01mpathlib\u001B[39;00m\u001B[38;5;250m \u001B[39m\u001B[38;5;28;01mimport\u001B[39;00m Path \u001B[38;5;28;01mas\u001B[39;00m pth\n\u001B[32m----> \u001B[39m\u001B[32m3\u001B[39m \u001B[38;5;28;01mimport\u001B[39;00m\u001B[38;5;250m \u001B[39m\u001B[34;01mmatplotlib\u001B[39;00m\u001B[34;01m.\u001B[39;00m\u001B[34;01mpyplot\u001B[39;00m\u001B[38;5;250m \u001B[39m\u001B[38;5;28;01mas\u001B[39;00m\u001B[38;5;250m \u001B[39m\u001B[34;01mplt\u001B[39;00m\n\u001B[32m      4\u001B[39m \u001B[38;5;28;01mimport\u001B[39;00m\u001B[38;5;250m \u001B[39m\u001B[34;01mseaborn\u001B[39;00m\u001B[38;5;250m \u001B[39m\u001B[38;5;28;01mas\u001B[39;00m\u001B[38;5;250m \u001B[39m\u001B[34;01msns\u001B[39;00m\n\u001B[32m      5\u001B[39m \u001B[38;5;28;01mimport\u001B[39;00m\u001B[38;5;250m \u001B[39m\u001B[34;01mpandas\u001B[39;00m\u001B[38;5;250m \u001B[39m\u001B[38;5;28;01mas\u001B[39;00m\u001B[38;5;250m \u001B[39m\u001B[34;01mpd\u001B[39;00m\n",
-      "\u001B[31mModuleNotFoundError\u001B[39m: No module named 'matplotlib'"
-     ]
-    }
-   ],
+   "outputs": [],
    "execution_count": 1
   },
   {
    "cell_type": "code",
-   "outputs": [],
    "source": [
     "#upd"
    ],
    "metadata": {
-    "collapsed": false
-   },
-   "id": "58528d6efdb47b92"
-  },
-  {
-   "metadata": {
+    "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-11-14T17:34:55.910708Z",
-     "start_time": "2024-11-14T17:34:55.899125Z"
+     "end_time": "2025-08-24T16:34:13.306919Z",
+     "start_time": "2025-08-24T16:34:13.304899Z"
     }
    },
-   "cell_type": "code",
-   "source": [
-    "current_path = Path.cwd()\n",
-    "RowData_path = f\"{current_path.parent}\\\\Data\\\\RowData\\\\\"\n"
-   ],
-   "id": "b7f7f7c6947031b9",
+   "id": "58528d6efdb47b92",
    "outputs": [],
    "execution_count": 2
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-11-14T17:43:39.240443Z",
-     "start_time": "2024-11-14T17:43:39.211934Z"
+     "end_time": "2025-08-24T16:34:13.385559Z",
+     "start_time": "2025-08-24T16:34:13.383620Z"
+    }
+   },
+   "cell_type": "code",
+   "source": [
+    "current_path = Path.cwd()\n",
+    "RowData_path = f\"{current_path.parent}/ScoreCard/Data/TransformedData/\"\n",
+    "processed_data_path = f\"{current_path.parent}/ScoreCard/Data/ProcessedData/\""
+   ],
+   "id": "b7f7f7c6947031b9",
+   "outputs": [],
+   "execution_count": 3
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-08-24T16:34:13.442818Z",
+     "start_time": "2025-08-24T16:34:13.438211Z"
+    }
+   },
+   "cell_type": "code",
+   "source": "RowData_path",
+   "id": "ee94f8ceaa61103d",
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'/home/qristinius/Desktop/Credit-Scoring/ScoreCard/Data/TransformedData/'"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "execution_count": 4
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-08-24T16:34:13.518514Z",
+     "start_time": "2025-08-24T16:34:13.498395Z"
     }
    },
    "cell_type": "code",
@@ -100,7 +116,6 @@
     "def process_credit_info():\n",
     "\n",
     "    def overdue_days():\n",
-    "\n",
     "        # Group by 'loan_id' and 'credit_status' to calculate the required stats\n",
     "        loan_summary = data.groupby(['loan_id', 'credit_status'])['overdue_days'].agg(\n",
     "            sum_overdue_days='sum',\n",
@@ -461,13 +476,13 @@
    ],
    "id": "2fe8342d7d3576ff",
    "outputs": [],
-   "execution_count": 7
+   "execution_count": 5
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-11-14T17:47:45.671426Z",
-     "start_time": "2024-11-14T17:43:39.397998Z"
+     "end_time": "2025-08-24T16:38:18.329782Z",
+     "start_time": "2025-08-24T16:34:13.546504Z"
     }
    },
    "cell_type": "code",
@@ -485,13 +500,13 @@
    ],
    "id": "16726e42fd057f0d",
    "outputs": [],
-   "execution_count": 8
+   "execution_count": 6
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-11-14T17:47:54.493337Z",
-     "start_time": "2024-11-14T17:47:52.250765Z"
+     "end_time": "2025-08-24T16:38:27.960240Z",
+     "start_time": "2025-08-24T16:38:25.408276Z"
     }
    },
    "cell_type": "code",
@@ -511,30 +526,20 @@
    ],
    "id": "9b245ef717b70710",
    "outputs": [],
-   "execution_count": 9
+   "execution_count": 7
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-11-14T17:49:43.608763Z",
-     "start_time": "2024-11-14T17:49:43.068190Z"
+     "end_time": "2025-08-24T16:38:49.634005Z",
+     "start_time": "2025-08-24T16:38:49.011313Z"
     }
    },
    "cell_type": "code",
-   "source": [
-    "merged_df.to_feather(RowData_path + \"ML_data.feather\")"
-   ],
+   "source": "merged_df.to_feather(processed_data_path + \"ML_data.feather\")",
    "id": "1cd10224fdeb2a47",
    "outputs": [],
-   "execution_count": 11
-  },
-  {
-   "metadata": {},
-   "cell_type": "code",
-   "outputs": [],
-   "execution_count": null,
-   "source": [],
-   "id": "87a8455f52cf1309"
+   "execution_count": 8
   }
  ],
  "metadata": {
