auto binning error

--- a/ScoreCard/Data Transformations.ipynb
+++ b/ScoreCard/Data Transformations.ipynb
@@ -6,8 +6,8 @@
    "metadata": {
     "collapsed": true,
     "ExecuteTime": {
-     "end_time": "2025-08-24T16:02:54.019311Z",
-     "start_time": "2025-08-24T16:02:53.781318Z"
+     "end_time": "2025-08-24T18:00:49.609325Z",
+     "start_time": "2025-08-24T18:00:49.214005Z"
     }
    },
    "source": [
@@ -26,8 +26,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-08-24T16:02:54.029339Z",
-     "start_time": "2025-08-24T16:02:54.024355Z"
+     "end_time": "2025-08-24T18:00:49.626543Z",
+     "start_time": "2025-08-24T18:00:49.619836Z"
     }
    },
    "cell_type": "code",
@@ -65,8 +65,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2025-08-24T16:03:18.753540Z",
-     "start_time": "2025-08-24T16:02:54.109882Z"
+     "end_time": "2025-08-24T18:01:45.667297Z",
+     "start_time": "2025-08-24T18:00:49.783437Z"
     }
    },
    "id": "d5e90b98e1b842db",
@@ -218,14 +218,13 @@
     "    \"AMT_REQ_CREDIT_BUREAU_YEAR\": \"clicks_last_12months\",\n",
     "\n",
     "}\n",
-    "application_train.rename(columns=application_train_rename_columns, inplace=True)\n",
-    "application_train.to_feather(save_path+\"applications.feather\")"
+    "application_train.rename(columns=application_train_rename_columns, inplace=True)"
    ],
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2025-08-24T16:03:19.158907Z",
-     "start_time": "2025-08-24T16:03:18.779373Z"
+     "end_time": "2025-08-24T18:01:45.706546Z",
+     "start_time": "2025-08-24T18:01:45.698415Z"
     }
    },
    "id": "4cd1d2450a5b3e0c",
@@ -259,8 +258,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2025-08-24T16:03:19.175451Z",
-     "start_time": "2025-08-24T16:03:19.173576Z"
+     "end_time": "2025-08-24T18:01:45.739503Z",
+     "start_time": "2025-08-24T18:01:45.736085Z"
     }
    },
    "id": "e1729cdb102007b2",
@@ -280,8 +279,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2025-08-24T16:03:19.223073Z",
-     "start_time": "2025-08-24T16:03:19.220521Z"
+     "end_time": "2025-08-24T18:01:45.784799Z",
+     "start_time": "2025-08-24T18:01:45.781380Z"
     }
    },
    "id": "a80d7060f9a80386",
@@ -321,8 +320,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2025-08-24T16:03:19.272510Z",
-     "start_time": "2025-08-24T16:03:19.268780Z"
+     "end_time": "2025-08-24T18:01:45.835060Z",
+     "start_time": "2025-08-24T18:01:45.829392Z"
     }
    },
    "id": "87f8db0b66a467bb",
@@ -347,8 +346,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2025-08-24T16:03:19.318573Z",
-     "start_time": "2025-08-24T16:03:19.316338Z"
+     "end_time": "2025-08-24T18:01:45.895348Z",
+     "start_time": "2025-08-24T18:01:45.890798Z"
     }
    },
    "id": "39febf5259a1d9f6",
@@ -373,8 +372,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2025-08-24T16:03:19.385984Z",
-     "start_time": "2025-08-24T16:03:19.383635Z"
+     "end_time": "2025-08-24T18:01:45.948144Z",
+     "start_time": "2025-08-24T18:01:45.943661Z"
     }
    },
    "id": "59921f11d53d5dbe",
@@ -428,8 +427,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2025-08-24T16:03:19.433471Z",
-     "start_time": "2025-08-24T16:03:19.430092Z"
+     "end_time": "2025-08-24T18:01:45.992942Z",
+     "start_time": "2025-08-24T18:01:45.986445Z"
     }
    },
    "id": "ca006c16b9742700",
@@ -457,6 +456,8 @@
     "    'def_60_social_circle',\n",
     "    \"target\"\n",
     "]]\n",
+    "applications.to_feather(save_path+\"applications.feather\")\n",
+    "\n",
     "\n",
     "\n",
     "\n",
@@ -632,8 +633,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2025-08-24T16:03:23.647709Z",
-     "start_time": "2025-08-24T16:03:19.479379Z"
+     "end_time": "2025-08-24T18:01:57.437307Z",
+     "start_time": "2025-08-24T18:01:46.036755Z"
     }
    },
    "id": "281a6a6c9cf73305",
@@ -643,8 +644,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-08-24T16:03:23.704482Z",
-     "start_time": "2025-08-24T16:03:23.702538Z"
+     "end_time": "2025-08-24T18:01:57.541173Z",
+     "start_time": "2025-08-24T18:01:57.538226Z"
     }
    },
    "cell_type": "code",
@@ -656,8 +657,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-08-24T16:03:23.758668Z",
-     "start_time": "2025-08-24T16:03:23.756904Z"
+     "end_time": "2025-08-24T18:01:57.646035Z",
+     "start_time": "2025-08-24T18:01:57.643596Z"
     }
    },
    "cell_type": "code",
@@ -669,8 +670,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-08-24T16:03:23.812684Z",
-     "start_time": "2025-08-24T16:03:23.810875Z"
+     "end_time": "2025-08-24T18:01:57.775238Z",
+     "start_time": "2025-08-24T18:01:57.772096Z"
     }
    },
    "cell_type": "code",
@@ -682,8 +683,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-08-24T16:03:23.865906Z",
-     "start_time": "2025-08-24T16:03:23.864172Z"
+     "end_time": "2025-08-24T18:01:57.822692Z",
+     "start_time": "2025-08-24T18:01:57.819527Z"
     }
    },
    "cell_type": "code",
@@ -695,8 +696,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-08-24T16:03:23.920719Z",
-     "start_time": "2025-08-24T16:03:23.918907Z"
+     "end_time": "2025-08-24T18:01:57.902882Z",
+     "start_time": "2025-08-24T18:01:57.900475Z"
     }
    },
    "cell_type": "code",
