--- a/ScoreCard/Stage 1 (Merging and feature engineerung.ipynb
+++ b/ScoreCard/Stage 1 (Merging and feature engineerung.ipynb
@@ -6,8 +6,8 @@
    "metadata": {
     "collapsed": true,
     "ExecuteTime": {
-     "end_time": "2025-08-24T16:34:13.300135Z",
-     "start_time": "2025-08-24T16:34:12.150331Z"
+     "end_time": "2025-08-24T18:14:43.526272Z",
+     "start_time": "2025-08-24T18:14:41.673950Z"
     }
    },
    "source": [
@@ -27,8 +27,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2025-08-24T16:34:13.306919Z",
-     "start_time": "2025-08-24T16:34:13.304899Z"
+     "end_time": "2025-08-24T18:14:43.534963Z",
+     "start_time": "2025-08-24T18:14:43.532248Z"
     }
    },
    "id": "58528d6efdb47b92",
@@ -38,8 +38,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-08-24T16:34:13.385559Z",
-     "start_time": "2025-08-24T16:34:13.383620Z"
+     "end_time": "2025-08-24T18:14:43.633423Z",
+     "start_time": "2025-08-24T18:14:43.630411Z"
     }
    },
    "cell_type": "code",
@@ -55,8 +55,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-08-24T16:34:13.442818Z",
-     "start_time": "2025-08-24T16:34:13.438211Z"
+     "end_time": "2025-08-24T18:14:43.686913Z",
+     "start_time": "2025-08-24T18:14:43.679891Z"
     }
    },
    "cell_type": "code",
@@ -79,8 +79,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-08-24T16:34:13.518514Z",
-     "start_time": "2025-08-24T16:34:13.498395Z"
+     "end_time": "2025-08-24T18:14:43.767617Z",
+     "start_time": "2025-08-24T18:14:43.742947Z"
     }
    },
    "cell_type": "code",
@@ -481,8 +481,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-08-24T16:38:18.329782Z",
-     "start_time": "2025-08-24T16:34:13.546504Z"
+     "end_time": "2025-08-24T18:19:37.989641Z",
+     "start_time": "2025-08-24T18:14:43.787433Z"
     }
    },
    "cell_type": "code",
@@ -505,8 +505,226 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-08-24T16:38:27.960240Z",
-     "start_time": "2025-08-24T16:38:25.408276Z"
+     "end_time": "2025-08-24T18:19:38.077748Z",
+     "start_time": "2025-08-24T18:19:38.062731Z"
+    }
+   },
+   "cell_type": "code",
+   "source": "contacts",
+   "id": "ccac66d367b86271",
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "        loan_id  mobile  emp_phone  work_phone  mobile_reachable  phone  \\\n",
+       "0        100002    True       True       False              True   True   \n",
+       "1        100003    True       True       False              True   True   \n",
+       "2        100004    True       True        True              True   True   \n",
+       "3        100006    True       True       False              True  False   \n",
+       "4        100007    True       True       False              True  False   \n",
+       "...         ...     ...        ...         ...               ...    ...   \n",
+       "307506   456251    True       True       False              True  False   \n",
+       "307507   456252    True      False       False              True   True   \n",
+       "307508   456253    True       True       False              True  False   \n",
+       "307509   456254    True       True       False              True  False   \n",
+       "307510   456255    True       True        True              True   True   \n",
+       "\n",
+       "        email  last_phone_change_days  contact_mobile_count  \n",
+       "0       False                 -1134.0                     3  \n",
+       "1       False                  -828.0                     3  \n",
+       "2       False                  -815.0                     4  \n",
+       "3       False                  -617.0                     2  \n",
+       "4       False                 -1106.0                     2  \n",
+       "...       ...                     ...                   ...  \n",
+       "307506  False                  -273.0                     2  \n",
+       "307507  False                     0.0                     2  \n",
+       "307508   True                 -1909.0                     2  \n",
+       "307509  False                  -322.0                     2  \n",
+       "307510  False                  -787.0                     4  \n",
+       "\n",
+       "[307511 rows x 9 columns]"
+      ],
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>loan_id</th>\n",
+       "      <th>mobile</th>\n",
+       "      <th>emp_phone</th>\n",
+       "      <th>work_phone</th>\n",
+       "      <th>mobile_reachable</th>\n",
+       "      <th>phone</th>\n",
+       "      <th>email</th>\n",
+       "      <th>last_phone_change_days</th>\n",
+       "      <th>contact_mobile_count</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>100002</td>\n",
+       "      <td>True</td>\n",
+       "      <td>True</td>\n",
+       "      <td>False</td>\n",
+       "      <td>True</td>\n",
+       "      <td>True</td>\n",
+       "      <td>False</td>\n",
+       "      <td>-1134.0</td>\n",
+       "      <td>3</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>100003</td>\n",
+       "      <td>True</td>\n",
+       "      <td>True</td>\n",
+       "      <td>False</td>\n",
+       "      <td>True</td>\n",
+       "      <td>True</td>\n",
+       "      <td>False</td>\n",
+       "      <td>-828.0</td>\n",
+       "      <td>3</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>100004</td>\n",
+       "      <td>True</td>\n",
+       "      <td>True</td>\n",
+       "      <td>True</td>\n",
+       "      <td>True</td>\n",
+       "      <td>True</td>\n",
+       "      <td>False</td>\n",
+       "      <td>-815.0</td>\n",
+       "      <td>4</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>100006</td>\n",
+       "      <td>True</td>\n",
+       "      <td>True</td>\n",
+       "      <td>False</td>\n",
+       "      <td>True</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>-617.0</td>\n",
+       "      <td>2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>100007</td>\n",
+       "      <td>True</td>\n",
+       "      <td>True</td>\n",
+       "      <td>False</td>\n",
+       "      <td>True</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>-1106.0</td>\n",
+       "      <td>2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>307506</th>\n",
+       "      <td>456251</td>\n",
+       "      <td>True</td>\n",
+       "      <td>True</td>\n",
+       "      <td>False</td>\n",
+       "      <td>True</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>-273.0</td>\n",
+       "      <td>2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>307507</th>\n",
+       "      <td>456252</td>\n",
+       "      <td>True</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>True</td>\n",
+       "      <td>True</td>\n",
+       "      <td>False</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>307508</th>\n",
+       "      <td>456253</td>\n",
+       "      <td>True</td>\n",
+       "      <td>True</td>\n",
+       "      <td>False</td>\n",
+       "      <td>True</td>\n",
+       "      <td>False</td>\n",
+       "      <td>True</td>\n",
+       "      <td>-1909.0</td>\n",
+       "      <td>2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>307509</th>\n",
+       "      <td>456254</td>\n",
+       "      <td>True</td>\n",
+       "      <td>True</td>\n",
+       "      <td>False</td>\n",
+       "      <td>True</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>-322.0</td>\n",
+       "      <td>2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>307510</th>\n",
+       "      <td>456255</td>\n",
+       "      <td>True</td>\n",
+       "      <td>True</td>\n",
+       "      <td>True</td>\n",
+       "      <td>True</td>\n",
+       "      <td>True</td>\n",
+       "      <td>False</td>\n",
+       "      <td>-787.0</td>\n",
+       "      <td>4</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>307511 rows × 9 columns</p>\n",
+       "</div>"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "execution_count": 7
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-08-24T18:19:39.738247Z",
+     "start_time": "2025-08-24T18:19:38.131372Z"
     }
    },
    "cell_type": "code",
@@ -522,24 +740,41 @@
     "\n",
     "# Perform successive left joins\n",
     "for df in dfs:\n",
+    "    print()\n",
     "    merged_df = merged_df.merge(df, on='loan_id', how='left')"
    ],
    "id": "9b245ef717b70710",
-   "outputs": [],
-   "execution_count": 7
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n"
+     ]
+    }
+   ],
+   "execution_count": 8
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-08-24T16:38:49.634005Z",
-     "start_time": "2025-08-24T16:38:49.011313Z"
+     "end_time": "2025-08-24T18:19:40.400769Z",
+     "start_time": "2025-08-24T18:19:40.009995Z"
     }
    },
    "cell_type": "code",
    "source": "merged_df.to_feather(processed_data_path + \"ML_data.feather\")",
    "id": "1cd10224fdeb2a47",
    "outputs": [],
-   "execution_count": 8
+   "execution_count": 12
   }
  ],
  "metadata": {
